--- a/specs/source/vocabs/payswarm.html
+++ b/specs/source/vocabs/payswarm.html
@@ -91,9 +91,6 @@
         <h3>AssetSignature (of questionable use, Signature discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>Authority (NOT IMPLEMENTED, but should be, paired with com:destinationOwnerType)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>BuyerSignature (NOT IMPLEMENTED, of questionable use, signature discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
@@ -103,19 +100,19 @@
         <h3>ContractSignature (ADDED, of questionable use, Signature discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>File (NOT IMPLEMENTED, don't need it at the moment, include it to show future direction?)</h3>
+        <h3>Data</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>Identity (NOT IMPLEMENTED, of questionable use)</h3>
+        <h3>Identity (NOT IMPLEMENTED, need to discuss further, JSON-LD Structure discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>License (NOT IMPLEMENTED, but should be)</h3>
+        <h3>License</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>LicenseSignature (NOT IMPLEMENTED, of questionable use, Signature discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>Listing (NOT IMPLEMENTED, but should be)</h3>
+        <h3>Listing</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>ListingSignature (ADDED, of questionable use, Signature discussion)</h3>
@@ -127,14 +124,14 @@
         <h3>SellerSignature (NOT IMPLEMENTED, of questionable use, Signature discussion)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>WebPage (NOT IMPLEMENTED, but should be)
+        <h3>WebPage</h3>
       </section>
     </section>
 
     <section>
       <h2>Constants</h2>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>NoAdditionalPayees (NOT IMPLEMENTED, but should be)</h3>
+        <h3>NoAdditionalPayees</h3>
       </section>
     </section>
 
@@ -144,19 +141,7 @@
         <h3>account</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>accountId (NOT IMPLEMENTED, remove from the spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>allowCustomPools (NOT IMPLEMENTED, remove from the spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>amountResolved (NOT IMPLEMENTED, remove from the spec - how do we tell if an amount is resolved?)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>amountType (NOT IMPLEMENTED, remove from spec, replaced by PayeeRules)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>actor (ADDED, unknown use, ask Longley)</h3>
+        <h3>actor (ADDED, unknown use, Longley has to resolve)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>asset</h3>
@@ -174,61 +159,19 @@
         <h3>authority</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>buyer (NOT IMPLEMENTED, remove from spec, replaced with ps:assetAcquirer)</h3>
+        <h3>contentHash (NOT IMPLEMENTED, possibly remove, Signature discussion</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>buyerId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>collectionId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>collections (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>contentHash</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>contentUrl (NOT IMPLEMENTED, but should be)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>cover (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>delegateId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>deleted</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>disabled</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>distribution (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>expiration (NOT IMPLEMENTED, remove from spec)</h3>
+        <h3>contentUrl</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>forAsset</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>forMediaId (NOT IMPLEMENTED, possibly remove from spec, how do we tell what media a payee is for?)</h3>
+        <h3>licenseTemplate (was ps:grantTemplate)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>gid (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>grant</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>grantTemplate (NOT IMPLEMENTED, but should be)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>grantTerms (NOT IMPLEMENTED, but should be)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>groupId (NOT IMPLEMENTED, remove from spec)</h3>
+        <h3>licenseTerms (was ps:grantTerms)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>identityHash</h3>
@@ -237,43 +180,21 @@
         <h3>identitySalt</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>ipv4Address (doesn't really belong in this vocab)</h3>
+        <h3>originatingClient</h3>
+        <p>The originating address of a transaction, IPv4, IPv6, phone number, 
+etc.</p>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>license</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseAmount (NOT IMPLEMENTED, remove from spec)</h3>
+        <h3>licenseHash (REVISIT, questionable)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseHash</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseProvider (NOT IMPLEMENTED, remove from spec, of questionable value)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseTerms (NOT IMPLEMENTED, remove from spec, replaced by ps:grantTerms)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseText (NOT IMPLEMENTED, remove from spec, replaced by ps:grantTemplate)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>licenseUrl (ADDED, but not actually used anywhere)</h3>
+        <h3>licenseUrl (REVISIT, but not actually used anywhere)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>listing</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>mimeType (NOT IMPLEMENTED, remove from spec, used w/ ps:File)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>min (NOT IMPLEMENTED, remove from spec, replaced by com:minimumAmount)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>notValidAfter (NOT IMPLEMENTED, perhaps use gr:validThrough instead?)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>notValidBefore (NOT IMPLEMENTED, perhaps use gr:validFrom instead?)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
         <h3>listingHash (ADDED)</h3>
@@ -282,40 +203,17 @@
         <h3>owner</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>ownerId (NOT IMPLEMENTED, remove from spec)</h3>
+        <h3>privatePayees (REVISIT, is the name correct?)</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>permission (NOT IMPLEMENTED, remove from spec)</h3>
+        <h3>role</h3>
+        <p>Can be any of "acquirer", "provider", "authority", etc.</p>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>privatePayees (NEED TO DISCUSS, should this be in the spec?)</h3>
+        <h3>validFrom</h3>
       </section>
       <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>profileId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>prose (NOT IMPLEMENTED, remove from spec, replaced by ps:grantTemplate/ps:grantTerms)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>rightsHolder (NOT IMPLEMENTED, but should be)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>role (NOT IMPLEMENTED, remove from spec, of questionable use)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>roleId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>seller (NOT IMPLEMENTED, remove from spec, replaced by ps:assetProvider)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>userId (NOT IMPLEMENTED, remove from spec)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>validFrom (NOT IMPLEMENTED, probably should be, depends on gr:validFrom discussion)</h3>
-      </section>
-      <section id="" about="http://purl.org/payswarm#" typeof="owl:">
-        <h3>validThrough (NOT IMPLEMENTED, probably should be, depends on gr:validFrom discussion)</h3>
+        <h3>validUntil</h3>
       </section>
     </section>
 
