--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -87,7 +87,7 @@
 
       <section id="Deposit" about="http://purl.org/commerce#Deposit"
         typeof="owl:Class">
-        <h3>Deposit (NOT IMPLEMENTED, but should be)</h3>
+        <h3>Deposit (was ps:Deposit)</h3>
           <p>
 A transfer of funds from a source account into a destination account typically
 performed as a means for storing monetary amounts in the destination account.
@@ -147,7 +147,7 @@ The following example describes a credit card deposit:
 
       <section id="DepositSignature" about="http://purl.org/commerce#DepositSignature"
         typeof="owl:Class">
-        <h3>DepositSignature</h3>
+        <h3>DepositSignature (REVISIT, Signature discussion)</h3>
           <p>
 A signature verifying the details of a <a href="#Deposit">Deposit</a>.
           </p>
@@ -202,7 +202,7 @@ The following example expresses a flat payment of $0.05 USD.
 
       <section id="PayeeRule" about="http://purl.org/commerce#PayeeRule"
         typeof="owl:Class">
-        <h3>PayeeRule (NOT IMPLEMENTED, but should be)</h3>
+        <h3>PayeeRule</h3>
           <p>
 A Payee Rule is a mechanism that can describe limits and allowances on the 
 payees during a transaction. These rules are typically used to apply 
@@ -240,7 +240,7 @@ rates or exclusive percentages. That is, inclusive percentages are not allowed.
           <pre>
 {
     "a": "&lt;com:PayeeRule>",
-    "com:rateType": ["com:FlatRate", "com:ExclusivePercentage"]
+    "com:rateType": ["com:FlatAmount", "com:ExclusivePercentage"]
 }
           </pre>
 
@@ -385,11 +385,6 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>FlatRate  (NOT IMPLEMENTED, duplicates FlatAmount)</h3>
-      </section>
-
-      <section id="" about="http://purl.org/commerce#"
-        typeof="owl:">
         <h3>InclusivePercentage</h3>
       </section>
 
@@ -429,12 +424,22 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>destinationOwnerType (NOT IMPLEMENTED, but should be)</h3>
+        <h3>destinationOwnerType (REVISIT)</h3>
+      </section>
+
+      <section id="" about="http://purl.org/commerce/creditcard#"
+        typeof="owl:">
+        <h3>gatewayApprovalCode</h3>
+      </section>
+
+      <section id="" about="http://purl.org/commerce/creditcard#"
+        typeof="owl:">
+        <h3>gatewayError</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>maximumRate (NOT IMPLEMENTED, but should be)</h3>
+        <h3>maximumRate</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -444,27 +449,27 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>limitation (NOT IMPLEMENTED, but should be,  was ps:limitation)</h3>
+        <h3>limitation (was ps:limitation)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>minimumAmount (ADDED)</h3>
+        <h3>minimumAmount (ADDED, REVISIT, minimumAmount or minimumRate?)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>percentage (NOT IMPLEMENTED, but should be, was: ps:percentage)</h3>
+        <h3>payeePosition (was: ps:payeePosition)</h3>
+      </section>
+
+      <section id="" about="http://purl.org/commerce/creditcard#"
+        typeof="owl:">
+        <h3>paymentGateway</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>payeePosition (ADDED, was: ps:payeePosition)</h3>
-      </section>
-
-      <section id="" about="http://purl.org/commerce#"
-        typeof="owl:">
-        <h3>transfer (NOT IMPLEMENTED, but should be, was ps:transfer)</h3>
+        <h3>transfer (was ps:transfer)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -490,11 +495,6 @@ into a more traditional offline account.
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
         <h3>source</h3>
-      </section>
-
-      <section id="" about="http://purl.org/commerce#"
-        typeof="owl:">
-        <h3>total (ADDED, duplicates com:amount, should be removed?)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
