--- a/specs/source/vocabs/signature.html
+++ b/specs/source/vocabs/signature.html
@@ -86,16 +86,16 @@
     <section>
       <h2>Classes</h2>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
+        typeof="rdfs:Class">
         <h3>Signature (was ps:Signature)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>SignatureType (was ps:SignatureType)</h3>
+        typeof="rdfs:Class">
+        <h3>SignatureAlgorithm</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>StandardSignature (was ps:StandardSignature)
+        typeof="rdfs:Class">
+        <h3>JsonldSignature</h3>
       </section>
     </section>
 
@@ -106,36 +106,32 @@
     <section>
       <h2>Properties</h2>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
+        typeof="rdfs:">
         <h3>signature (was ps:signature)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
+        typeof="rdfs:">
         <h3>signatureFor (was ps:signatureFor)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
+        typeof="rdfs:">
         <h3>signer (was ps:signer)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
+        typeof="rdfs:">
         <h3>signatureValue (was ps:signatureValue)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>signatureAlgorithm (NOT IMPLEMENTED, was ps:signatureAlgorithm)</h3>
+        typeof="rdfs:">
+        <h3>signatureAlgorithm</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>signatureHashAlgorithm (NOT IMPLEMENTED, was ps:signatureHashAlgorithm)</h3>
+        typeof="rdfs:">
+        <h3>signatureHashAlgorithm</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>signatureSerializationAlgorithm (NOT IMPLEMENTED, was ps:signatureSerializationAlgorithm)</h3>
-      </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="owl:">
-        <h3>signedFor (ADDED)
+        typeof="rdfs:">
+        <h3>signatureSerializationAlgorithm</h3>
       </section>
     </section>
 
