Added types and ids to signature vocabulary.

--- a/specs/source/vocabs/signature.html
+++ b/specs/source/vocabs/signature.html
@@ -85,15 +85,15 @@
 
     <section>
       <h2>Classes</h2>
-      <section id="" about="http://purl.org/signature#"
+      <section id="Signature" about="http://purl.org/signature#Signature"
         typeof="rdfs:Class">
         <h3>Signature (was ps:Signature)</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
+      <section id="SignatureAlgorithm" about="http://purl.org/signature#SignatureAlgorithm"
         typeof="rdfs:Class">
         <h3>SignatureAlgorithm</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
+      <section id="JsonldSignature" about="http://purl.org/signature#JsonldSignature"
         typeof="rdfs:Class">
         <h3>JsonldSignature</h3>
       </section>
@@ -105,32 +105,32 @@
 
     <section>
       <h2>Properties</h2>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signature" about="http://purl.org/signature#signature"
+        typeof="rdf:Property">
         <h3>signature (was ps:signature)</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signatureFor" about="http://purl.org/signature#signatureFor"
+        typeof="rdf:Property">
         <h3>signatureFor (was ps:signatureFor)</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signer" about="http://purl.org/signature#signer"
+        typeof="rdf:Property">
         <h3>signer (was ps:signer)</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signatureValue" about="http://purl.org/signature#signatureValue"
+        typeof="rdf:Property">
         <h3>signatureValue (was ps:signatureValue)</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signatureAlgorithm" about="http://purl.org/signature#signatureAlgorithm"
+        typeof="rdf:Property">
         <h3>signatureAlgorithm</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signatureHashAlgorithm" about="http://purl.org/signature#signatureHashAlgorithm"
+        typeof="rdf:Property">
         <h3>signatureHashAlgorithm</h3>
       </section>
-      <section id="" about="http://purl.org/signature#"
-        typeof="rdfs:">
+      <section id="signatureSerializationAlgorithm" about="http://purl.org/signature#signatureSerializationAlgorithm"
+        typeof="rdf:Property">
         <h3>signatureSerializationAlgorithm</h3>
       </section>
     </section>
